--- a/client/less/components/cpm/page.less
+++ b/client/less/components/cpm/page.less
@@ -1,7 +1,6 @@
 .cpm{
   width: 100%;
-  padding-top: 60px;
-  height: calc(100vh - 60px);
+  height: 100%;
   .flex();
   &__content{
     width: 40%;
