modify tickets table v2

--- a/client/less/common/color.less
+++ b/client/less/common/color.less
@@ -5,3 +5,6 @@
 @csrd-dark-blue: #0F24D4;
 @csrd-blue: #2B80FF;
 @csrd-background: #F3F3F3;
+@csrd-gray: #A7AFB7;
+@csrd-light-gray: #EDF2F7;
+@csrd-turquoise: #47DDCC;
