--- a/client/less/components/cpm/form.less
+++ b/client/less/components/cpm/form.less
@@ -2,7 +2,7 @@
   width: calc(100% - 20px);
   height: calc(100% - 20px);
   padding: 10px;
-  overflow-y: scroll;
+  //overflow-y: scroll;
   font-family: @font-roboto;
   &__input-container{
     margin-top: 10px;
