--- a/client/less/components/cpm/page.less
+++ b/client/less/components/cpm/page.less
@@ -3,14 +3,13 @@
   height: 100%;
   .flex();
   &__content{
-    width: 40%;
-    height: 100%;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.36);
-    background: aliceblue;
+    width: calc(38% - 35px);
+    height: calc(100% - 50px);
+    padding: 25px 10px 25px 25px;
   }
   &__table{
-    width: 60%;
-    height: 100%;
-    background: aliceblue;
+    padding: 25px 25px 25px 10px;
+    width: calc(62% - 35px);
+    height: calc(100% - 50px);
   }
 }
