--- a/client/less/components/cpm/table.less
+++ b/client/less/components/cpm/table.less
@@ -2,23 +2,42 @@
   font-family: @font-roboto;
   width: calc(100% - 20px);
   height: calc(100% - 20px);
-  overflow-y: scroll;
+  //overflow-y: scroll;
   padding: 10px;
   &__list{
     .flex(column-reverse)
   }
+  &__title{
+    font-weight: bold;
+    font-size: 15px;
+    margin-left: 30px;
+  }
   &__ticket{
+    border-top: 2px solid #D3E3F7;
     padding-left: 20px;
     padding-right: 20px;
-    margin-top: 10px;
     width: calc(100% - 40px);
-    height: 50px;
+    height: 45px;
     background: white;
     .flex(row, space-between, center);
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.36);
+    font-size: 14px;
+    //box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.36);
+    &:last-child{
+      border-top: 0;
+    }
+    &:nth-child(2n - 1){
+      background: @csrd-light-gray;
+    }
     &_header{
-      font-weight: 600;
-      font-size: 16px;
+      padding-left: 20px;
+      padding-right: 20px;
+      width: calc(100% - 40px);
+      height: 45px;
+      background: white;
+      .flex(row, space-between, center);
+      font-weight: 500;
+      font-size: 14px;
+      color: @csrd-gray;
     }
     &-col{
       width: 15%;
@@ -30,11 +49,23 @@
         width: 30%;
       }
       &:nth-child(3), &:nth-child(4){
-        width: 10%;
+        width: 20%;
       }
       &:nth-child(2), &:nth-child(5){
         width: 15%;
       }
+      &:nth-child(2):not(&_header),
+      &:nth-child(5):not(&_header){
+        background: @csrd-turquoise;
+        text-transform: uppercase;
+      }
+    }
+    &-text._type{
+      display: inline;
+      color: white;
+      font-weight: 700;
+      height: 20px;
+      .flex(row, center, center);
     }
   }
 }
