--- a/client/less/common/color.less
+++ b/client/less/common/color.less
@@ -2,6 +2,6 @@
 @nc-light-blue: #4C7AA1;
 @nc-yellow: #F8BF4C;
 @csrd-violet: #5164F3;
-@csrd-dark-blue: #0F24D4;
+@csrd-dark-blue: #0f24d4;
 @csrd-blue: #2B80FF;
 @csrd-background: #F3F3F3;
