--- a/client/less/common/font-vars.less
+++ b/client/less/common/font-vars.less
@@ -2,4 +2,5 @@
 //@font-montserrat: 'Montserrat', sans-serif;
 //@font-roboto: 'Open Sans', sans-serif;
 @font-roboto: 'Roboto', sans-serif;
+@font-noto-sans: 'Noto Sans', sans-serif;
 //@font-roboto: 'Montserrat', sans-serif;
