modify table + begin problem info card

--- a/client/less/common/color.less
+++ b/client/less/common/color.less
@@ -1,10 +1,12 @@
 @nc-dark-blue: #173148;
 @nc-light-blue: #4C7AA1;
 @nc-yellow: #F8BF4C;
+@csrd-background: #F3F3F3;
+@csrd-light-gray: #EDF2F7;
+@csrd-divider-gray: #CDD6DC;
+@csrd-gray: #A7AFB7;
+@csrd-text-gray: #9FA2B4;
+@csrd-turquoise: #47DDCC;
 @csrd-violet: #5164F3;
 @csrd-dark-blue: #0F24D4;
 @csrd-blue: #2B80FF;
-@csrd-background: #F3F3F3;
-@csrd-gray: #A7AFB7;
-@csrd-light-gray: #EDF2F7;
-@csrd-turquoise: #47DDCC;
