--- a/client/less/components/cpm/page.less
+++ b/client/less/components/cpm/page.less
@@ -1,15 +1,35 @@
 .cpm{
   width: 100%;
   height: 100%;
-  .flex();
+  max-height: 1000px;
   &__content{
-    width: calc(38% - 35px);
+    .flex();
+    width: 100%;
     height: calc(100% - 50px);
-    padding: 25px 10px 25px 25px;
+  }
+  &__info{
+    width: calc(35% - 25px);
+    height: calc(100% - 30px);
+    padding: 15px 10px 15px 15px;
   }
   &__table{
-    padding: 25px 25px 25px 10px;
-    width: calc(62% - 35px);
-    height: calc(100% - 50px);
+    padding: 15px 15px 15px 10px;
+    width: calc(65% - 25px);
+    height: calc(100% - 30px);
+  }
+  &__header{
+    width: calc(100% - 30px);
+    height: 50px;
+    border-bottom: 1px solid @csrd-divider-gray;
+    .flex(row, space-between, flex-end);
+    margin: 0 15px;
+  }
+  &__title{
+    font-family: @font-roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 22px;
+    margin-bottom: 8px;
   }
 }
