--- a/client/less/components/cpm/table.less
+++ b/client/less/components/cpm/table.less
@@ -41,31 +41,44 @@
     }
     &-col{
       width: 15%;
-      max-height: 40px;
-      text-overflow: ellipsis;
-      overflow: hidden;
+      .flex(row, flex-start, center);
+
 
       &:nth-child(1){
-        width: 30%;
+        width: 25%;
       }
       &:nth-child(3), &:nth-child(4){
-        width: 20%;
+        width: 16%;
       }
       &:nth-child(2), &:nth-child(5){
-        width: 15%;
-      }
-      &:nth-child(2):not(&_header),
-      &:nth-child(5):not(&_header){
-        background: @csrd-turquoise;
-        text-transform: uppercase;
+        width: 16%;
       }
     }
+    &-text{
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      overflow: hidden;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 2;
+      line-height: 17px;
+      max-height: 34px;
+    }
     &-text._type{
-      display: inline;
       color: white;
-      font-weight: 700;
-      height: 20px;
-      .flex(row, center, center);
+      font-weight: bold;
+      height: 16px;
+      background: @csrd-turquoise;
+      text-transform: uppercase;
+      padding: 4px 8px;
+    }
+    &-text._status{
+      color: white;
+      font-weight: bold;
+      height: 16px;
+      background: @csrd-turquoise;
+      text-transform: uppercase;
+      padding: 4px 12px;
+      border-radius: 12px;
     }
   }
 }
