problem & customer info

--- a/client/less/common/color.less
+++ b/client/less/common/color.less
@@ -2,7 +2,7 @@
 @nc-light-blue: #4C7AA1;
 @nc-yellow: #F8BF4C;
 @csrd-background: #F3F3F3;
-@csrd-light-gray: #EDF2F7;
+@csrd-light-gray: #edf2f7;
 @csrd-divider-gray: #CDD6DC;
 @csrd-gray: #A7AFB7;
 @csrd-text-gray: #9FA2B4;
