--- a/client/less/components/cpm/table.less
+++ b/client/less/components/cpm/table.less
@@ -4,6 +4,14 @@
   height: calc(100% - 20px);
   //overflow-y: scroll;
   padding: 10px;
+  position: relative;
+  left: 0;
+  transition: .3s;
+
+  &._hidden{
+    left: -50px;
+  }
+
   &__list{
     .flex(column-reverse)
   }
@@ -21,12 +29,19 @@
     background: white;
     .flex(row, space-between, center);
     font-size: 14px;
+    transition: .3s;
+    cursor: pointer;
     //box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.36);
     &:last-child{
       border-top: 0;
     }
     &:nth-child(2n - 1){
       background: @csrd-light-gray;
+    }
+
+
+    &:hover{
+      background: #d1dae5;
     }
     &_header{
       padding-left: 20px;
