--- a/client/less/common/color.less
+++ b/client/less/common/color.less
@@ -5,7 +5,7 @@
 @csrd-light-gray: #edf2f7;
 @csrd-divider-gray: #CDD6DC;
 @csrd-gray: #A7AFB7;
-@csrd-text-gray: #9FA2B4;
+@csrd-text-gray: #9fa2b4;
 @csrd-turquoise: #47DDCC;
 @csrd-violet: #5164F3;
 @csrd-dark-blue: #0f24d4;
