--- a/client/less/components/cpm/table.less
+++ b/client/less/components/cpm/table.less
@@ -1,12 +1,13 @@
 .cpm-table{
   font-family: @font-roboto;
   width: calc(100% - 20px);
-  height: calc(100% - 20px);
+  max-height: calc(100% - 20px);
   //overflow-y: scroll;
   padding: 10px;
   position: relative;
   left: 0;
   transition: .3s;
+  overflow-y: scroll;
 
   &._hidden{
     left: -50px;
