MSK20FRONT-8 [CPM] table by user + select customer + raw form

--- a/client/less/components/cpm/cpm.less
+++ b/client/less/components/cpm/cpm.less
@@ -3,3 +3,6 @@
 @import "./form.less";
 @import "./card.less";
 @import "./info.less";
+@import "./selectForm.less";
+@import "./createForm.less";
+@import "./loader.less";
