--- a/client/less/common/color.less
+++ b/client/less/common/color.less
@@ -6,6 +6,7 @@
 @csrd-divider-gray: #CDD6DC;
 @csrd-gray: #A7AFB7;
 @csrd-text-gray: #9fa2b4;
+@csrd-light-blue: #EBF4F8;
 @csrd-turquoise: #47DDCC;
 @csrd-violet: #5164F3;
 @csrd-dark-blue: #0f24d4;
