--- a/client/less/components/cpm/form.less
+++ b/client/less/components/cpm/form.less
@@ -1,8 +1,105 @@
-.cpm-form{
-  width: calc(100% - 20px);
-  height: calc(100% - 20px);
-  padding: 10px;
-  //overflow-y: scroll;
+.input{
+  width: 100%;
+  height: 34px;
+  position: relative;
+
   font-family: @font-roboto;
 
+  &__label{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 13px;
+    line-height: 15px;
+    letter-spacing: 0.4px;
+    color: #6A6C78;
+  }
+
+  &__input{
+    width: calc(100% - 20px);
+    height: 100%;
+    background: #FFFFFF;
+    border: 1px solid #DBE2EA;
+    box-shadow: 0px 4px 8px rgba(44, 39, 56, 0.04);
+    border-radius: 6px;
+    padding: 0 10px;
+    &:before{
+      color: #9FA2B4;
+    }
+  }
+
+  &__button, &__closer{
+    background: white;
+    border: 0;
+    .flex(row, center, center);
+    font-size: 20px;
+    color: @csrd-violet;
+    cursor: pointer;
+    width: 20px;
+    height: 20px;
+    right: 8px;
+    top: 8px;
+    position: absolute;
+    &:hover{
+      color: @csrd-dark-blue;
+    }
+  }
+
+  &__closer{
+    display: none;
+  }
+
+  &__loader{
+    display: none;
+    width: 20px;
+    height: 20px;
+    right: 8px;
+    top: 8px;
+    position: absolute;
+    cursor: pointer;
+  }
+
+  &__dropdown{
+    display: none;
+    padding: 5px 0;
+    margin-top: 10px;
+    width: 100%;
+    background: #FFFFFF;
+    border: 1px solid #DBE2EA;
+    box-shadow: 0px 4px 8px rgba(44, 39, 56, 0.04), 0px 20px 20px rgba(44, 39, 56, 0.04);
+    border-radius: 6px;
+    overflow: hidden;
+    transition: .3s;
+    height: 0;
+    opacity: 0;
+    position: absolute;
+    z-index: 10;
+    &._show{
+      opacity: 1;
+      height: auto;
+    }
+  }
+  &__item{
+    width: calc(100% - 30px);
+    padding: 5px 15px 0 15px;
+    height: 40px;
+    cursor: pointer;
+    &:hover{
+      background: @csrd-light-blue;
+    }
+  }
+  &__name{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    color: #000000;
+  }
+  &__phone{
+    margin-top: 3px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    color: #6A9EB5;
+  }
 }
