MSK20FRONT-4 [CIM] impl customer information block

--- a/client/less/main.less
+++ b/client/less/main.less
@@ -1,2 +1,9 @@
-@import "common/common.less";
-@import "components/components.less";
+@import "components/customer-information-page/index.less";
+
+body {
+  margin: 0;
+}
+
+.CIP {
+  height: 100%;
+}
