--- a/client/less/components/cpm/form.less
+++ b/client/less/components/cpm/form.less
@@ -1,6 +1,5 @@
 .input{
   width: 100%;
-  height: 34px;
   position: relative;
 
   font-family: @font-roboto;
@@ -15,19 +14,64 @@
   }
 
   &__input{
+    height: 34px;
     width: calc(100% - 20px);
-    height: 100%;
     background: #FFFFFF;
     border: 1px solid #DBE2EA;
     box-shadow: 0px 4px 8px rgba(44, 39, 56, 0.04);
     border-radius: 6px;
     padding: 0 10px;
+    position: relative;
+    &:before{
+      color: #9FA2B4;
+    }
+
+    animation: show .5s ease;
+
+    @keyframes show {
+      0%{
+        opacity: 0;
+        left: -10px;
+      }
+      100%{
+        opacity: 1;
+        left: 0;
+      }
+    }
+  }
+
+  &__textarea{
+    font-family: @font-roboto;
+    width: calc(100% - 20px);
+    height: 68px;
+    background: #FFFFFF;
+    border: 1px solid #DBE2EA;
+    box-shadow: 0px 4px 8px rgba(44, 39, 56, 0.04);
+    border-radius: 6px;
+    padding: 5px 10px;
+    position: relative;
+
+    animation: show .5s ease;
+
+    @keyframes show {
+      0%{
+        opacity: 0;
+        left: -10px;
+      }
+      100%{
+        opacity: 1;
+        left: 0;
+      }
+    }
+
     &:before{
       color: #9FA2B4;
     }
   }
 
   &__button, &__closer{
+    padding: 0;
+    outline:none;
     background: white;
     border: 0;
     .flex(row, center, center);
@@ -37,7 +81,7 @@
     width: 20px;
     height: 20px;
     right: 8px;
-    top: 8px;
+    bottom: 8px;
     position: absolute;
     &:hover{
       color: @csrd-dark-blue;
@@ -45,10 +89,13 @@
   }
 
   &__closer{
+    padding: 0;
     display: none;
+    outline:none;
   }
 
   &__loader{
+    .flex(row, center, center);
     display: none;
     width: 20px;
     height: 20px;
@@ -80,14 +127,25 @@
   }
   &__item{
     width: calc(100% - 30px);
-    padding: 5px 15px 0 15px;
+    padding: 0 15px;
     height: 40px;
     cursor: pointer;
+    .flex(column, center, flex-start);
+    &._small{
+      height: 30px;
+    }
     &:hover{
       background: @csrd-light-blue;
     }
   }
   &__name{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    color: #000000;
+  }
+  &__item-text{
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
