--- a/client/less/components/cpm/loader.less
+++ b/client/less/components/cpm/loader.less
@@ -4,7 +4,7 @@
   border-radius: 50%;
   width: 12px;
   height: 12px;
-  animation: spin .5s linear infinite;
+  animation: spin .5s ease infinite;
 }
 
 @keyframes spin {
