--- a/client/less/components/cpm/selectForm.less
+++ b/client/less/components/cpm/selectForm.less
@@ -1,7 +1,39 @@
 .select-form{
+  position: relative;
+  z-index: 2;
+
+  &._modal{
+    width: calc(35% - 30px);
+    top: 67px;
+    left: 15px;
+
+    animation: show .5s ease;
+
+    @keyframes show {
+      0%{
+        opacity: 0;
+      }
+      100%{
+        opacity: 1;
+      }
+    }
+
+  }
+
   &__search{
     width: calc(100% - 30px);
     padding: 0 15px;
     margin-top: 13px;
+  }
+  &__overlay{
+    &._show{
+      position: absolute;
+      z-index: 10;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,.4);
+    }
   }
 }
