--- a/client/less/components/cpm/table.less
+++ b/client/less/components/cpm/table.less
@@ -2,6 +2,7 @@
   font-family: @font-roboto;
   width: calc(100% - 20px);
   max-height: calc(100% - 20px);
+  min-height: 200px;
   //overflow-y: scroll;
   padding: 10px;
   position: relative;
@@ -51,6 +52,22 @@
     font-size: 14px;
     transition: .3s;
     cursor: pointer;
+    position: relative;
+
+    animation: show .5s ease;
+
+    @keyframes show {
+      0%{
+        opacity: 0;
+        left: -5px;
+      }
+      100%{
+        opacity: 1;
+        left: 0;
+      }
+    }
+
+
     //box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.36);
     &:last-child{
       border-top: 0;
