--- a/client/less/components/cpm/info.less
+++ b/client/less/components/cpm/info.less
@@ -8,9 +8,7 @@
     margin-top: 15px;
   }
   &__title{
-    font-style: normal;
-    font-weight: bold;
-    font-size: 15px;
+    .font(15px, bold);
     line-height: 18px;
     margin-left: 15px;
   }
@@ -44,15 +42,11 @@
     }
   }
   &__key{
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
+    .font(14px, 500);
     line-height: 18px;
   }
   &__value{
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
+    .font();
     line-height: 16px;
     text-align: right;
     color: @csrd-text-gray
