--- a/client/less/components/cpm/page.less
+++ b/client/less/components/cpm/page.less
@@ -1,16 +1,51 @@
 .cpm{
   width: 100%;
   height: 100%;
-  .flex();
+  max-height: 1000px;
+  //overflow-y: scroll;
   &__content{
-    width: 40%;
-    height: 100%;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.36);
-    background: aliceblue;
+    .flex();
+    width: 100%;
+    height: calc(100% - 50px);
+  }
+  &__info{
+    width: calc(35% - 25px);
+    height: calc(100% - 30px);
+    padding: 15px 10px 15px 15px;
   }
   &__table{
-    width: 60%;
-    height: 100%;
-    background: aliceblue;
+    padding: 15px 15px 15px 10px;
+    width: calc(65% - 25px);
+    height: calc(100% - 30px);
+  }
+  &__header{
+    width: calc(100% - 30px);
+    height: 50px;
+    border-bottom: 1px solid @csrd-divider-gray;
+    .flex(row, space-between, flex-end);
+    margin: 0 15px;
+  }
+  &__title{
+    .flex(row, center);
+  }
+  &__title-name{
+    font-family: @font-roboto;
+    .font(20px, 500);
+    line-height: 22px;
+    margin-bottom: 8px;
+  }
+  &__title-new{
+    font-family: @font-roboto;
+    .font();
+    line-height: 24px;
+    color: @csrd-very-dark-blue;
+    margin-left: 25px;
+
+    transition: .3s;
+    cursor: pointer;
+
+    &:hover{
+      color: @csrd-text-gray
+    }
   }
 }
