--- a/client/less/components/cpm/table.less
+++ b/client/less/components/cpm/table.less
@@ -1,40 +1,144 @@
-.cpm-table{
+.cpm-table {
   font-family: @font-roboto;
   width: calc(100% - 20px);
-  height: calc(100% - 20px);
-  overflow-y: scroll;
+  max-height: calc(100% - 20px);
+  min-height: 200px;
+  //overflow-y: scroll;
   padding: 10px;
-  &__list{
-    .flex(column-reverse)
+  position: relative;
+  left: 0;
+  transition: .3s;
+  overflow-y: scroll;
+
+  &._hidden {
+    left: -50px;
   }
-  &__ticket{
+
+  &__list {
+    .flex(column-reverse);
+  }
+
+  &__title {
+    margin-left: 15px;
+    .flex(row, flex-start, center);
+  }
+
+  &__title-name {
+    .font(15px, bold);
+  }
+
+  &__title-all {
+    font-family: @font-roboto;
+    .font;
+    line-height: 24px;
+    color: @csrd-very-dark-blue;
+    margin-left: 25px;
+
+    transition: .3s;
+    cursor: pointer;
+
+    &:hover {
+      color: @csrd-text-gray
+    }
+  }
+
+  &__ticket {
+    border-top: 2px solid @csrd-ticket-light-blue;
     padding-left: 20px;
     padding-right: 20px;
-    margin-top: 10px;
     width: calc(100% - 40px);
-    height: 50px;
+    height: 45px;
     background: white;
     .flex(row, space-between, center);
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.36);
-    &_header{
-      font-weight: 600;
-      font-size: 16px;
-    }
-    &-col{
-      width: 15%;
-      max-height: 40px;
-      text-overflow: ellipsis;
-      overflow: hidden;
+    .font();
+    transition: .3s;
+    cursor: pointer;
+    position: relative;
 
-      &:nth-child(1){
-        width: 30%;
+    animation: show .5s ease;
+
+    @keyframes show {
+      0% {
+        opacity: 0;
+        left: -5px;
       }
-      &:nth-child(3), &:nth-child(4){
-        width: 10%;
+      100% {
+        opacity: 1;
+        left: 0;
       }
-      &:nth-child(2), &:nth-child(5){
-        width: 15%;
+    }
+
+
+    //box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.36);
+    &:last-child {
+      border-top: 0;
+    }
+
+    &:nth-child(2n - 1) {
+      background: @csrd-light-gray;
+    }
+
+
+    &:hover {
+      background: @csrd-card-light-gray;
+    }
+
+    &_header {
+      padding-left: 20px;
+      padding-right: 20px;
+      width: calc(100% - 40px);
+      height: 45px;
+      background: white;
+      .flex(row, space-between, center);
+      .font(14px, 500);
+      color: @csrd-gray;
+    }
+
+    &-col {
+      width: 15%;
+      .flex(row, flex-start, center);
+
+
+      &:nth-child(1) {
+        width: 25%;
       }
+
+      &:nth-child(3), &:nth-child(4) {
+        width: 16%;
+      }
+
+      &:nth-child(2), &:nth-child(5) {
+        width: 16%;
+      }
+    }
+
+    &-text {
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      overflow: hidden;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 2;
+      line-height: 17px;
+      max-height: 34px;
+    }
+
+    &-text._type {
+      color: white;
+      .font(14px, bold);
+      height: 16px;
+      background: @csrd-turquoise;
+      text-transform: uppercase;
+      padding: 4px 8px;
+    }
+
+    &-text._status {
+      color: white;
+      .font(14px, bold);
+      height: 16px;
+      background: @csrd-turquoise;
+      text-transform: uppercase;
+      padding: 4px 12px;
+      border-radius: 12px;
     }
   }
 }
