MSK20FRONT [CPM] open create form implementation

--- a/client/less/components/cpm/cpm.less
+++ b/client/less/components/cpm/cpm.less
@@ -1,5 +1,7 @@
 @import "./page.less";
 @import "./table.less";
+@import "./input.less";
 @import "./form.less";
 @import "./info.less";
 @import "./card.less";
+@import "./button.less";
