--- a/client/less/common/vars.less
+++ b/client/less/common/vars.less
@@ -1,3 +1,4 @@
 //@url-helvetica-neue: '../../fonts/Helvetica_Neue/';
 //@url-yandex-sans: '../../fonts/YS_Text/';
-
+@border-radius: 8px;
+@box-shadow-radius: 3px;
