--- a/client/less/common/font-vars.less
+++ b/client/less/common/font-vars.less
@@ -4,3 +4,40 @@
 @font-roboto: 'Roboto', sans-serif;
 @font-noto-sans: 'Noto Sans', sans-serif;
 //@font-roboto: 'Montserrat', sans-serif;
+
+@font-family: @font-roboto, @font-noto-sans;
+
+@font-regular-size: 14px;
+@font-regular-weight: 400;
+@font-medium-size: 18px;
+@font-medium-weight: 500;
+@font-large-size: 22px;
+
+// font-weight-size
+.font-regular() {
+  .font(@font-family, @font-regular-weight, @font-regular-size, normal);
+}
+
+.font-regular-medium() {
+  .font-regular();
+  font-size: @font-medium-size;
+}
+
+.font-regular-large() {
+  .font-regular();
+  font-size: @font-large-size;
+}
+
+.font-medium() {
+  .font(@font-family, @font-medium-weight, @font-medium-size, normal);
+}
+
+.font-medium-regular() {
+  .font-medium();
+  font-size: @font-regular-size;
+}
+
+.font-medium-large() {
+  .font-medium();
+  font-size: @font-large-size;
+}
