--- a/client/less/components/cpm/input.less
+++ b/client/less/components/cpm/input.less
@@ -24,6 +24,10 @@
       color: #9FA2B4;
     }
 
+    &:disabled{
+      background: @csrd-light-gray;
+    }
+
     animation: show .5s ease;
 
     @keyframes show {
