--- a/client/less/components/roe/addon.less
+++ b/client/less/components/roe/addon.less
@@ -6,11 +6,11 @@
 
   &__name {
     color: @csrd-grey;
-    .font-regular-medium();
+    .font-header3();
   }
 
   &__main {
-    .font-medium-large();
+    .font-header1();
     display: flex;
     align-items: center;
     height: 100%;
@@ -23,7 +23,7 @@
   }
 
   &__price {
-    .font-regular-medium();
+    .font-regular();
     display: flex;
     justify-content: space-between;
     margin: 5px 0;
