--- a/client/less/components/roe/tariff.less
+++ b/client/less/components/roe/tariff.less
@@ -2,7 +2,7 @@
   display: flex;
   width: 100%;
   flex-direction: column;
-  .font-regular();
+  .font-table-regular();
 
   &__parameters {
     display: flex;
@@ -26,7 +26,7 @@
     align-items: center;
     justify-content: space-around;
     height: 40px;
-    border-radius: @border-radius;
+    border-radius: @card-border-radius;
     &:nth-child(2n+1) {
       background-color: #EDF2F7;
     }
