--- a/client/less/components/main.less
+++ b/client/less/components/main.less
@@ -1,7 +1,7 @@
 .sidebar{
   position: fixed;
   z-index: 10;
-  font-family: @font-noto-sans;
+  .font-side-bar();
   width: 255px;
   height: 100vh;
   background: linear-gradient(360deg, #5768F3 37.87%, #1C45EF 100%);
