MSK20FRONT-22 changed header mixins names

--- a/client/less/common/mixins.less
+++ b/client/less/common/mixins.less
@@ -71,7 +71,7 @@
 }
 
 // module title
-.font-header1() {
+.font-header-module-title() {
   font-family: @font-mulish;
   font-weight: @font-bold-weight;
   font-size: @font-x-large-size;
@@ -79,14 +79,14 @@
 }
 
 // sub-module (card) title
-.font-header2() {
+.font-header-sub-module-title() {
   font-family: @font-mulish;
   font-weight: @font-bold-weight;
   font-size: @font-large-size;
   font-style: normal;
 }
 
-.font-header3() {
+.font-header-title() {
   font-family: @font-mulish;
   font-weight: @font-medium-weight;
   font-size: @font-medium-size;
