--- a/client/less/components/roe/addon.less
+++ b/client/less/components/roe/addon.less
@@ -6,11 +6,11 @@
 
   &__name {
     color: @csrd-grey;
-    .font-header3();
+    .font-header-title();
   }
 
   &__main {
-    .font-header1();
+    .font-header-module-title();
     display: flex;
     align-items: center;
     height: 100%;
