--- a/client/less/components/roe/page.less
+++ b/client/less/components/roe/page.less
@@ -6,6 +6,7 @@
   flex-direction: column;
 
   &__header {
+    .font-header-module-title();
     margin: 10px 0;
   }
 
@@ -20,7 +21,7 @@
 
     &-header {
       margin: 0 0 10px 0;
-      .font-header2()
+      .font-header-sub-module-title()
     }
     &-tariff {
       display: flex;
@@ -45,7 +46,7 @@
     background: white;
     &-header {
       margin: 0 0 10px 0;
-      .font-header1();
+      .font-header-sub-module-title();
     }
     &-tariffs {
       display: flex;
