MSK20FRONT-10 and MSK20FRONT-11 saved vertical space, added colors, added fog remove, fixed scroll

--- a/client/less/common/color.less
+++ b/client/less/common/color.less
@@ -11,10 +11,13 @@
 @csrd-violet: #5164F3;
 @csrd-dark-blue: #0f24d4;
 @csrd-blue: #2B80FF;
-@csrd-background: #F3F3F3;
 @csrd-light-stroke: #E7E8F0;
 @csrd-grey: #A7AFB7;
 @csrd-very-dark-blue: #001737;
 @csrd-ticket-light-blue: #D3E3F7;
 @csrd-card-light-gray: #DDE4EB;
 @csrd-card-shadow-gray: rgba(90, 113, 208, 0.107337);
+@csrd-green: #2FA84F;
+@csrd-red: #EA3D2F;
+@csrd-white: white;
+@csrd-roe-tariff-violet: #3751FF;
