--- a/client/less/components/roe/roe.less
+++ b/client/less/components/roe/roe.less
@@ -1,4 +1,5 @@
 @import './page.less';
 @import './tariff.less';
-@import './connected-addons.less';
+@import './roe-addons.less';
 @import './addon.less';
+@import './roe-tariff-table.less';
