--- a/client/less/components/roe/page.less
+++ b/client/less/components/roe/page.less
@@ -7,28 +7,38 @@
 
   &__header {
     .font-header-module-title();
-    margin: 10px 0;
+    margin: 10px 0 0 10px;
   }
 
   &__connected {
+    flex: 0 1 auto;
     .roe-card();
     background: white;
     max-width: 65%;
-    margin: 15px 0;
+    margin: 10px 0;
+
     ::-webkit-scrollbar {
       display: none;
     }
 
     &-header {
-      margin: 0 0 10px 0;
+      margin: 0;
       .font-header-sub-module-title()
     }
+
     &-tariff {
+      //background: @csrd-light-gray;
+      border-radius: @card-border-radius;
+      color: @csrd-green;
       display: flex;
-      margin-bottom: 10px;
+      margin: 0 0 10px 0;
     }
+
     &-addons {
       position: relative;
+    }
+
+    &-addons._showFog {
       &::after {
         content: '';
         position: absolute;
@@ -36,35 +46,32 @@
         bottom: 0;
         height: 100%;
         width: 100%;
-        background: linear-gradient(to right, rgba(255,255,255, 0), rgba(255,255,255, 1));
+        background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
         pointer-events: none;
       }
     }
   }
 
   &__available {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
+    height: 100px;
+    position: relative;
     background: white;
-    &-header {
-      margin: 0 0 10px 0;
-      .font-header-sub-module-title();
-    }
-    &-tariffs {
-      display: flex;
-      //height: .calc(100vh - );
-      overflow: scroll;
-      position: relative;
-      &::after {
-        content: '';
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        height: 100%;
-        width: 100%;
-        background: linear-gradient(to bottom, rgba(255,255,255, 0), rgba(255,255,255, 1));
-        pointer-events: none;
-      }
-    }
+    margin-bottom: 10px;
+    //TODO adjust parameters width according to scrollbar
     .roe-card();
     max-width: 65%;
+
+    ::-webkit-scrollbar {
+      display: none;
+    }
+
+    &-header {
+      margin: 0;
+      flex: 0 1 auto;
+      .font-header-sub-module-title();
+    }
   }
 }
