--- a/client/less/components/roe/tariff.less
+++ b/client/less/components/roe/tariff.less
@@ -1,47 +1,24 @@
 .roe-tariff {
-  display: flex;
-  width: 100%;
-  flex-direction: column;
-  .font-table-regular();
-
-  &__parameters {
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-end;
-    color: @csrd-grey;
-    margin-bottom: 10px;
-
-    &-item{
-      &:nth-child(2), &:nth-child(3), &:nth-child(6) {
-        width: 10%;
-      }
-      &:nth-child(1), &:nth-child(4), &:nth-child(5), &:nth-child(7) {
-        width: 14%;
-      }
-    }
-  }
-
-  &__content {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    height: 40px;
+    min-height: 2.5em;
     border-radius: @card-border-radius;
-    &:nth-child(2n+1) {
-      background-color: #EDF2F7;
+    &:nth-child(2n) {
+      background-color: @csrd-light-gray;
     }
 
-    &-item {
-      &:nth-child(1) {
-        width: 14%;
-        .ellipsis();
+    &__item {
+      .ellipsis();
+
+      &:nth-child(3) {
+        width: 7%;
       }
-      &:nth-child(2), &:nth-child(3), &:nth-child(6) {
+      &:nth-child(2), &:nth-child(6) {
         width: 10%;
       }
-      &:nth-child(4), &:nth-child(5), &:nth-child(7) {
-        width: 14%;
+      &:nth-child(1), &:nth-child(4), &:nth-child(5), &:nth-child(7) {
+        width: 15%;
       }
     }
-  }
 }
