MSK20FRONT-21 [CPM] add full filters, sorts, cancelling and reopen

--- a/client/less/common/color.less
+++ b/client/less/common/color.less
@@ -10,7 +10,7 @@
 @csrd-turquoise: #47DDCC;
 @csrd-violet: #5164F3;
 @csrd-dark-blue: #0f24d4;
-@csrd-blue: #2B80FF;
+@csrd-blue: #69a4ff;
 @csrd-background: #F3F3F3;
 @csrd-light-stroke: #E7E8F0;
 @csrd-grey: #A7AFB7;
