--- a/client/less/components/cpm/button.less
+++ b/client/less/components/cpm/button.less
@@ -1,7 +1,7 @@
 .button{
   background: @csrd-blue;
   color: white;
-  .font(14px, bold);
+  .font-light;
   border: 0;
   width: 100px;
   height: 25px;
