--- a/client/less/components/cpm/cpm.less
+++ b/client/less/components/cpm/cpm.less
@@ -6,3 +6,8 @@
 @import "./card.less";
 @import "./button.less";
 @import "./loader.less";
+@import "./filterTrigger.less";
+@import "./filterBar.less";
+@import "./checkbox.less";
+@import "./datePicker.less";
+@import "./docs.less";
