--- a/client/less/components/cpm/form.less
+++ b/client/less/components/cpm/form.less
@@ -2,6 +2,7 @@
   padding-top: 15px;
   position: relative;
   font-family: @font-roboto;
+  max-height: calc(100vh - 80px);
 
   &._modal{
     top: 196px;
@@ -12,7 +13,7 @@
   }
 
   &__title-text{
-    .font(15px, bold);
+    .font-header-title;
     margin-left: 15px;
   }
 
@@ -33,13 +34,17 @@
   }
 
   &__form{
-    width: calc(80% - 30px);
+    width: calc(100% - 30px);
     padding: 15px;
   }
 
   &__input{
     margin-top: 10px;
 
+  }
+
+  &__docs{
+    width: 100%;
   }
 
   &__footer{
