--- a/client/less/components/cpm/page.less
+++ b/client/less/components/cpm/page.less
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   max-height: 1000px;
-  //overflow-y: scroll;
+  //overflow-y: auto;
   &__content {
     .flex();
     width: 100%;
@@ -34,8 +34,7 @@
   }
 
   &__title-name {
-    font-family: @font-roboto;
-    .font(20px, 500);
+    .font-header-module-title();
     line-height: 22px;
     margin-bottom: 8px;
   }
