MSK20FRONT-10 and MSK20FRONT-11 restructured code, fixed design-logical problems, added non-clickable yet buttons

--- a/client/less/common/color.less
+++ b/client/less/common/color.less
@@ -21,3 +21,6 @@
 @csrd-red: #EA3D2F;
 @csrd-white: white;
 @csrd-roe-tariff-violet: #3751FF;
+@csrd-roe-button-grey: #F0F1F7;
+@csrd-pink: #F7D2FF;
+@csrd-neon-green: #2CD9C5;
