--- a/client/less/components/roe/roe-addon.less
+++ b/client/less/components/roe/roe-addon.less
@@ -4,10 +4,22 @@
   display: flex;
   flex-direction: column;
 
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    &-name {
+      color: @csrd-blue;
+      .font-header-title();
+      margin-bottom: 2px;
+    }
+
+    &-button {
+      align-self: center;
+      margin: 0 0 0 0.5em;
+    }
+  }
   &__name {
-    color: @csrd-blue;
-    .font-header-title();
-    margin-bottom: 2px;
+
   }
 
   &__main {
@@ -34,7 +46,7 @@
 
     &-quantity-total {
       margin-right: 3px;
-      color: @csrd-red;
+      //color: @csrd-red;
     }
   }
 
@@ -55,5 +67,10 @@
     &-value {
       text-align: end;
     }
+  }
+
+  &._available {
+    //max-width: 30%;
+    //max-height: 5em;
   }
 }
