--- a/client/less/components/roe/roe-page.less
+++ b/client/less/components/roe/roe-page.less
@@ -29,7 +29,6 @@
     &-tariff {
       //background: @csrd-light-gray;
       border-radius: @card-border-radius;
-      color: @csrd-green;
       display: flex;
       margin: 0 0 10px 0;
     }
@@ -68,6 +67,16 @@
       display: none;
     }
 
+    &-packages {
+      height: calc(100% - 20px);
+    }
+
+    &-phones {
+      height: calc(100% - 20px);
+    }
+  }
+
+  &__sales {
     &-header {
       margin: 0;
       flex: 0 1 auto;
