--- a/client/less/components/roe/roe-tariff-table.less
+++ b/client/less/components/roe/roe-tariff-table.less
@@ -16,17 +16,16 @@
     color: @csrd-grey;
     border-bottom: solid 2px @csrd-divider-gray;
 
-
     &-item {
-      &:nth-child(3) {
+      &:nth-child(3), &:nth-child(6) {
         width: 7%;
       }
 
-      &:nth-child(2), &:nth-child(6) {
+      &:nth-child(1) {
         width: 10%;
       }
 
-      &:nth-child(1), &:nth-child(4), &:nth-child(5), &:nth-child(7) {
+      &:nth-child(4),&:nth-child(2), &:nth-child(5), &:nth-child(7), &:nth-child(1) {
         width: 15%;
       }
     }
@@ -35,8 +34,6 @@
   &__main {
     display: flex;
     flex-direction: column;
-    //overflow-y: scroll;
-    //margin-top: 2em;
     height: calc(100% - 20px);
 
     ::-webkit-scrollbar {
