--- a/client/less/components/roe/roe-tariff.less
+++ b/client/less/components/roe/roe-tariff.less
@@ -11,13 +11,15 @@
     &__item {
       .ellipsis();
 
-      &:nth-child(3) {
+      &:nth-child(3), &:nth-child(6) {
         width: 7%;
       }
-      &:nth-child(2), &:nth-child(6) {
+
+      &:nth-child(1) {
         width: 10%;
       }
-      &:nth-child(1), &:nth-child(4), &:nth-child(5), &:nth-child(7) {
+
+      &:nth-child(4),&:nth-child(2), &:nth-child(5), &:nth-child(7), &:nth-child(1) {
         width: 15%;
       }
     }
