--- a/client/less/components/roe/roe.less
+++ b/client/less/components/roe/roe.less
@@ -1,5 +1,12 @@
-@import './page.less';
-@import './tariff.less';
+@import 'roe-page.less';
+@import 'roe-tariff.less';
 @import './roe-addons.less';
-@import './addon.less';
+@import 'roe-addon.less';
 @import './roe-tariff-table.less';
+@import 'roe-button.less';
+@import './available-addons.less';
+@import './roe-phone.less';
+@import './available-phones.less';
+@import "roe-button.less";
+@import "roe-available-header.less";
+@import "roe-available-packages.less";
