--- a/client/less/common/color.less
+++ b/client/less/common/color.less
@@ -4,7 +4,7 @@
 @csrd-background: #F3F3F3;
 @csrd-light-gray: #edf2f7;
 @csrd-divider-gray: #CDD6DC;
-@csrd-gray: #A7AFB7;
+@csrd-gray: #a7afb7;
 @csrd-text-gray: #9fa2b4;
 @csrd-light-blue: #EBF4F8;
 @csrd-turquoise: #47DDCC;
