some critical changes after review done

--- a/client/less/components/cim/index.less
+++ b/client/less/components/cim/index.less
@@ -1,12 +1,12 @@
 @import "main.less";
-@import "customer-info";
-@import "fullname";
-@import "info";
-@import "location";
-@import "docs";
-@import "contacts";
-@import "status";
-@import "preferable";
-@import "contact";
-@import "wrapper";
-@import "table";
+@import "customer-info.less";
+@import "fullname.less";
+@import "info.less";
+@import "location.less";
+@import "docs.less";
+@import "contacts.less";
+@import "status.less";
+@import "preferable.less";
+@import "contact.less";
+@import "wrapper.less";
+@import "table.less";
