MSK20FRONT-10 and MSK20FRONT-11 added navigation

--- a/client/less/components/roe/roe-available-packages.less
+++ b/client/less/components/roe/roe-available-packages.less
@@ -1,5 +1,7 @@
 .roe-available-packages{
   &__button{
     margin: 5px 1em 5px 0;
+    color: @csrd-text-gray;
+    background-color: @csrd-light-gray;
   }
 }
