--- a/client/less/components/roe/roe-page.less
+++ b/client/less/components/roe/roe-page.less
@@ -67,8 +67,8 @@
       display: none;
     }
 
-    &-packages {
-      height: calc(100% - 20px);
+    &-content {
+      height: calc(100%);
     }
 
     &-phones {
