--- a/client/less/components/roe/roe.less
+++ b/client/less/components/roe/roe.less
@@ -1,12 +1,13 @@
-@import 'roe-page.less';
-@import 'roe-tariff.less';
+@import './roe-page.less';
+@import './roe-tariff.less';
 @import './roe-addons.less';
-@import 'roe-addon.less';
+@import './roe-addon.less';
 @import './roe-tariff-table.less';
-@import 'roe-button.less';
 @import './available-addons.less';
 @import './roe-phone.less';
 @import './available-phones.less';
-@import "roe-button.less";
-@import "roe-available-header.less";
-@import "roe-available-packages.less";
+@import "./roe-button.less";
+@import "./roe-available-header.less";
+@import "./roe-available-packages.less";
+@import "./roe-nav.less";
+@import "./roe-available-content.less";
