--- a/client/less/components/roe/roe.less
+++ b/client/less/components/roe/roe.less
@@ -11,3 +11,6 @@
 @import "./roe-available-packages.less";
 @import "./roe-nav.less";
 @import "./roe-available-content.less";
+@import "roe-connected-content.less";
+@import "./roe-available.less";
+@import "./roe-main.less";
