MSK20FRONT-12 added a list of Sales Orders, only rudimental functioning

--- a/client/less/components/roe/roe.less
+++ b/client/less/components/roe/roe.less
@@ -3,14 +3,17 @@
 @import './roe-addons.less';
 @import './roe-addon.less';
 @import './roe-tariff-table.less';
-@import './available-addons.less';
+@import './roe-available-addons.less';
 @import './roe-phone.less';
-@import './available-phones.less';
+@import './roe-available-phones.less';
 @import "./roe-button.less";
 @import "./roe-available-header.less";
 @import "./roe-available-packages.less";
 @import "./roe-nav.less";
 @import "./roe-available-content.less";
-@import "roe-connected-content.less";
+@import "./roe-connected-content.less";
 @import "./roe-available.less";
 @import "./roe-main.less";
+@import "./roe-sales-order.less";
+@import "./roe-sales.less";
+@import "./roe-sales-orders.less";
