--- a/client/less/components/cim/customer-info.less
+++ b/client/less/components/cim/customer-info.less
@@ -1,6 +1,6 @@
 
+.cim .customer-info {
 
-.customer-info {
   &__title {
     margin: 16px 0 0 16px;
     font-family: 'Mulish';
@@ -12,7 +12,7 @@
     display: inline-flex;
     justify-content: space-between;
     align-items: center;
-    height: 20px;
+    height: 50px;
     width: 94%;
     margin: 0 16px 0 16px;
   }
