--- a/client/less/components/cim/main.less
+++ b/client/less/components/cim/main.less
@@ -12,7 +12,7 @@
     color:black;
     display: inline-block;
     width: 30%;
-    max-height: 46%;
+    height: 40%;
     margin: 4% 2% 1% 2%;
     background: #FFFFFF;
     border-radius: 8px;
