MSK20FRONT-12 Added confirm to Plus Ultra package connection, changes tariff stats

--- a/client/less/common/mixins.less
+++ b/client/less/common/mixins.less
@@ -49,7 +49,7 @@
   font-style: normal;
 }
 
-// flags/buttons
+// flags/roe-buttons
 .font-button() {
   font-family: @font-mulish;
   font-weight: @font-bold-weight;
