MSK20FRONT-24 [common] login form

--- a/client/less/components/components.less
+++ b/client/less/components/components.less
@@ -3,4 +3,4 @@
 @import "./bim/bim.less";
 @import "./cim/index.less";
 @import "./roe/roe.less";
-@import "./confirm.less";
+@import "common/common.less";
